# hjkls

./: .gitignore  .hjkls.toml  Cargo.toml  FORMATTING.md  LINTING.md  README.md  dprint.json  flake.nix  justfile  typos.toml
.github/workflows/: ci.yml
examples/: check_ast.rs  parse_tree.rs
src/: backend.rs  builtins.rs  completion.rs  config.rs  db.rs  diagnostics.rs  formatter.rs  logger.rs  main.rs  symbols.rs
src/diagnostics/: ignore.rs  style.rs  suspicious.rs
src/formatter/: brackets.rs  colons.rs  commas.rs  indent.rs  operators.rs  rules.rs  spaces.rs
test/: e2e_init.lua  helpers.lua  minimal_init.lua  minimal_init.vim  test.vim  test_completion.lua  test_definition.lua  test_diagnostics.lua  test_document_highlight.lua  test_folding_range.lua  test_hover.lua  test_references.lua  test_selection_range.lua  test_signature_help.lua  test_symbols.lua
test/fixtures/: ignore_test.vim  sample.vim  syntax_errors.vim  vim9script_errors.vim
test/fixtures/autoload/myplugin/: util.vim
