[package]
name = "hjkls"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Vim script Language Server"
license = "MIT"
repository = "https://github.com/kawarimidoll/hjkls"

[dependencies]
tower-lsp-server = "0.23"
tree-sitter = "0.25"
tree-sitter-vim = "0.4"
texter = "0.2"
tokio = { version = "1", features = ["full"] }
salsa = "0.25"
